# QSF-examples

./: .gitignore  .gitmodules  CMakeLists.txt  FAQ.md  README.md  agh-cluster-install-intel.sh  agh-cluster-install.sh  configure  configure-clang  configure-custom  configure-gcc11  configure-gcc9  configure-llvm  configure-mpic  run  run-im  run-re  sendmeto  tester.sh
cmake/: colors.cmake
examples/__backup/: CMakeLists.txt  project.ini  template.cpp
examples/argon-2e/: CMakeLists.txt  README.md  argon-2e.cpp  estimates.nb  prepare.sh
examples/argon-2e/ptemplates/: prun-im.sh  prun-re.sh
examples/neon-3e/: CMakeLists.txt  neon-3e.cpp  pbuild.sh  ptest.sh
examples/neon-3e/ptemplates/: prun-im.sh  prun-re-big.sh
examples/neon-3e/test-2d/: config-2D-test.h
examples/nitrogen-3e/: CMakeLists.txt  nitrogen-3e.cpp  pbuild.sh  prepare.sh  project.ini  prometeusz-build.sh  prometeusz-interactive.sh  prometeusz-run-im.sh  prometeusz-run-re22.sh  prometeusz-run-re27.sh  prometeusz-run-test.sh  prun-re-f01.sh  prun-test.sh
examples/nitrogen-3e/ptemplates/: prun-im.sh  prun-re.sh
examples/nitrogen-3e/test-2d/: test-2d.cpp
examples/template/: CMakeLists.txt  template  template.cpp
examples/template copy/: CMakeLists.txt  template.cpp  tester.nb
examples/template-ini/: README.md  project.ini  template-ini.cpp
examples/thiede/: thiede.cpp
nitrogen-3e/: CMakeLists.bac  CMakeLists.fast  CMakeLists.txt  agh-cluster-gs.sh  agh-cluster-intel.sh  agh-cluster.sh  config.h  cxxopts.h  nitrogen-3e.cpp  project.ini  prometeusz-build.sh  prometeusz-interactive.sh  prometeusz-run-im.sh  prometeusz-run-re.sh  prometeusz-run-test.sh
nitrogen-3e/test-2d/: config-2D-test.h
nitrogen-3e/trash/: agh-cluster-install-intel.sh  config-batch.h
plots/: antisymm.nb  fields.nb  sparse.nb  wf-plotter.nb
template/: CMakeLists.txt  project.ini  template.cpp
template-3e/: CMakeLists.txt  template-3e.cpp
theory/: multielectron-mask.nb
